2004-07-15  Scott Smedley  <scottie7@tpg.com.au>

	* NEWS:
	New options for FvwmButtons module.

2004-07-12  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/fvwm.1.in:
	use commas between conditions

2004-07-11  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/builtins.c (CMD_Wait):
	ignore MapNotify reported to any window except the root window

	* fvwm/module_interface.c (CONFIGARGS):
	correct number of CONFIGARGS arguments

	* libs/vpacket.h (ConfigWinPacket):
	frame_x and frame_y are signed

2004-07-11  Scott Smedley  <scottie7@tpg.com.au>

	* fvwm/conditional.c:
	* fvwm/fvwm.h:
	* fvwm/fvwm.1.in:
	* AUTHORS:
	Committed patch by Norman Yarvin (with a few minor mods) to extend
	conditionals to handle multiple window names.

2004-07-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/module_interface.c (CONFIGARGS):
	* libs/vpacket.h (ConfigWinPacket):
	put window_flags at end of structure

2004-07-09  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/module_interface.c (CONFIGARGS):
	(OLDCONFIGARGS):
	(SETOLDFLAGS):
	(SendConfig):
	(BroadcastConfig):
	removed old module interface
	(CONFIGARGS):

	* libs/vpacket.h (ConfigWinPacket):
	64 bit fix

2004-07-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/execcontext.c (__exc_change_context):
	fixed handling of etrigger event, fixing a problem with PropertyNotify
	events during resizing and possibly other problems too

	* fvwm/add_window.c (RestoreWithdrawnLocation):
	fixed traveling windows if application changed gravity hint before
	recapture

	* fvwm/frame.c (combine_decor_gravities):
	(combine_gravities):
	renamed
	(frame_restore_client_gravities):
	fixed window gravity after resize

	* libs/FEvent.c (FPeekEvent):
	(FPeekIfEvent):
	(FCheckPeekIfEvent):
	fixed some event handling bugs

	* fvwm/conditional.c (CMD_Test):
	(match_version):
	corrected use of Bool types
	(match_version):
	simplified, fixed compilation
	(ver):
	use int as return type

	* libs/Ficonv.c (convert_charsets):
	reindented
