@@ -158,7 +158,7 @@ int main(int argc, char **argv)
   FScreenInit(dpy);
   FShapeInit(dpy);
   FRenderInit(dpy);
-  //SetMessageMask(fd, M_CONFIG_INFO | M_END_CONFIG_INFO  | M_SENDCONFIG);
+  /* SetMessageMask(fd, M_CONFIG_INFO | M_END_CONFIG_INFO  | M_SENDCONFIG); */
   SetMessageMask(fd, M_CONFIG_INFO | M_END_CONFIG_INFO);
   parseOptions(fd);
 
