@@ -38,6 +38,11 @@ Changes in alpha release 2.5.11 (not released yet)
 * New FvwmButtons options: ActiveColorset, ActiveIcon, ActiveTitle,
   PressColorset, PressIcon and PressTitle.
 
+* The option CurrentGlobalPageAnyDesk was accidentally named
+  CurrentGlobbalPageAnyDesk before.
+
+* New condition AnyScreen.
+
 -------------------------------------------------------------------
 
 Changes in alpha release 2.5.10 (19-Mar-2004)
