@@ -1,3 +1,8 @@
+2004-07-15  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmBanner/FvwmBanner.c (main):
+	removed C++ comment
+
 2004-07-15  Scott Smedley  <scottie7@tpg.com.au>
 
 	* FvwmButtons/FvwmButtons.1:
